[project]
name = "homework-20250522"
version = "0.1.0"
description = ""
authors = [
    {name = "Sergey",email = "sgudkovv@gmail.com"}
]

readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "onnxruntime (>=1.21.1,<2.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "ipython (>=9.2.0,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

